--- a/Controls/GraphControl.xaml
+++ b/Controls/GraphControl.xaml
@@ -18,6 +18,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     d:DataContext="{d:DesignInstance Type=viewmodels:DashboardViewModel}"
     Loading="Control_Loading"
+    Loaded="Control_Loaded"
     mc:Ignorable="d">
 
     <UserControl.Resources>
