--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -35,6 +35,7 @@
                 
                 SelectionFollowsFocus="Disabled"
                 OpenPaneLength="180"
+                        
                 IsTabStop="False">
             
             <NavigationView.MenuItems>
@@ -81,13 +82,13 @@
 
                  <NavigationViewItemSeparator  Margin="0,5,0,5"/>
 
-                <NavigationViewItem l:Uids.Uid="Navigation_SwitchPortfolio" Tag="SwitchPortfolioView" >
+                <NavigationViewItem l:Uids.Uid="Navigation_SwitchPortfolio" Tag="SwitchPortfolioView" Padding="0,0,-10,0">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE8AB;"/>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE8AB;" Margin="0,0,0,0"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
 
-                <NavigationViewItem l:Uids.Uid="Navigation_Admin" Tag="AdminView" >
+                <NavigationViewItem l:Uids.Uid="Navigation_Admin" Tag="AdminView" Padding="0,0,-10,0">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE912;"/>
                     </NavigationViewItem.Icon>
