--- a/Views/AccountsView.xaml
+++ b/Views/AccountsView.xaml
@@ -11,6 +11,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls" 
     d:DataContext="{d:DesignInstance Type=viewmodels:AccountsViewModel}"
+    Loaded="View_Loaded"
     Loading="View_Loading"
     Unloaded="View_Unloaded"
      mc:Ignorable="d">
