--- a/Views/NarrativesView.xaml
+++ b/Views/NarrativesView.xaml
@@ -10,6 +10,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls"
+    Loaded="View_Loaded"
     Loading="View_Loading"
     Unloaded="View_Unloaded"
      mc:Ignorable="d">
