--- a/Views/PriceLevelsView.xaml
+++ b/Views/PriceLevelsView.xaml
@@ -10,6 +10,7 @@
     xmlns:l="using:WinUI3Localizer"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls"
+    Loaded="View_Loaded"
     Loading="View_Loading"
     Unloaded="View_Unloaded"
     mc:Ignorable="d">
