--- a/Controls/PriceLevelsListViewControl.xaml
+++ b/Controls/PriceLevelsListViewControl.xaml
@@ -42,6 +42,7 @@
             <ColumnDefinition Width="0.16*"/>
             <ColumnDefinition Width="0.16*"/>
             <ColumnDefinition Width="0.16*"/>
+            <ColumnDefinition Width="0.16*"/>
             <ColumnDefinition Width="90"/>
         </Grid.ColumnDefinitions>
 
@@ -57,8 +58,7 @@
                 PointerHoverColor="Goldenrod"
                 Group="{Binding SortGroup}"
                 Command="{Binding SortOnNameCommand}"
-                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
-                />
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"/>
             <local:ColumnHeaderButton 
                 l:Uids.Uid="PriceLevelsLV_Symbol" 
                 IsEnabled="False" 
@@ -66,8 +66,7 @@
                 FontSize="12"
                 FontStyle="Italic"
                 VerticalAlignment="Bottom"
-                HorizontalTextAlignment="Left"
-                />
+                HorizontalTextAlignment="Left"/>
         </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="2" Margin="5" VerticalAlignment="Center" >
@@ -78,8 +77,7 @@
                 FontSize="12"
                 FontStyle="Italic"
                 VerticalAlignment="Bottom"
-                HorizontalTextAlignment="Right"
-                />
+                HorizontalTextAlignment="Right"/>
             <local:ColumnHeaderButton 
                 l:Uids.Uid="PriceLevelsLV_AvgCost" 
                 IsEnabled="False" 
@@ -87,8 +85,7 @@
                 FontSize="12"
                 FontStyle="Italic"
                 VerticalAlignment="Bottom"
-                HorizontalTextAlignment="Right"
-                />
+                HorizontalTextAlignment="Right"/>
         </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="3" Margin="5" VerticalAlignment="Center" >
@@ -99,8 +96,7 @@
                 FontSize="12"
                 FontStyle="Italic"
                 VerticalAlignment="Bottom"
-                HorizontalTextAlignment="Right"
-            />      
+                HorizontalTextAlignment="Right"/>      
             <local:ColumnHeaderButton 
                 l:Uids.Uid="PriceLevelsLV_DistanceToTpLevel" 
                 IsEnabled="True"
@@ -113,8 +109,7 @@
                 Group="{Binding SortGroup}"
                 SortingOrder="Descending"
                 Command="{Binding SortOnDistanceToTpLevelCommand}"
-                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
-        />
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"/>
         </StackPanel>
         <StackPanel Grid.Row="0" Grid.Column="4" Margin="5" VerticalAlignment="Center" >
             <local:ColumnHeaderButton 
@@ -124,8 +119,7 @@
                 FontSize="12"
                 FontStyle="Italic"
                 VerticalAlignment="Bottom"
-                HorizontalTextAlignment="Right"
-        />
+                HorizontalTextAlignment="Right"/>
             <local:ColumnHeaderButton 
                 l:Uids.Uid="PriceLevelsLV_DistanceToBuyLevel" 
                 IsEnabled="True" 
@@ -137,8 +131,7 @@
                 PointerHoverColor="Goldenrod"
                 Group="{Binding SortGroup}"
                 Command="{Binding SortOnDistanceToBuyLevelCommand}"
-                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
-        />
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"/>
         </StackPanel>
         <StackPanel Grid.Row="0" Grid.Column="5" Margin="5" VerticalAlignment="Center" >
             <local:ColumnHeaderButton 
@@ -148,8 +141,7 @@
                 FontSize="12"
                 FontStyle="Italic"
                 VerticalAlignment="Bottom"
-                HorizontalTextAlignment="Right"
-        />
+                HorizontalTextAlignment="Right"/>
             <local:ColumnHeaderButton 
                 l:Uids.Uid="PriceLevelsLV_DistanceToStopLevel" 
                 IsEnabled="True" 
@@ -161,14 +153,33 @@
                 PointerHoverColor="Goldenrod"
                 Group="{Binding SortGroup}"
                 Command="{Binding SortOnDistanceToStopLevelCommand}"
-                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
-        />
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"/>
+        </StackPanel>
+        <StackPanel Grid.Row="0" Grid.Column="6" Margin="5" VerticalAlignment="Center" >
+            <local:ColumnHeaderButton 
+                l:Uids.Uid="PriceLevelsLV_EmaLevel" 
+                IsEnabled="False" 
+                Margin="0,0,0,0"
+                FontSize="12"
+                FontStyle="Italic"
+                VerticalAlignment="Bottom"
+                HorizontalTextAlignment="Right"/>
+            <local:ColumnHeaderButton 
+                l:Uids.Uid="PriceLevelsLV_DistanceToEmaLevel" 
+                IsEnabled="True" 
+                Margin="0,0,0,0"
+                FontSize="12"
+                FontStyle="Italic"
+                VerticalAlignment="Bottom"
+                HorizontalTextAlignment="Right"
+                PointerHoverColor="Goldenrod"
+                Group="{Binding SortGroup}"
+                Command="{Binding SortOnDistanceToEmaLevelCommand}"
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"/>
         </StackPanel>
 
-        
-
-        <Rectangle Grid.Row="1" Grid.ColumnSpan="7" Fill="#eebc3f" Height="2" Margin="15,0,8,0"/>
-        <ListView x:Name="PriceLevelsListView" Grid.Row="2" Grid.ColumnSpan="7" x:FieldModifier="public" ItemsSource="{Binding _priceLevelService.ListCoins}" BorderBrush="Transparent" BorderThickness="1"                           
+        <Rectangle Grid.Row="1" Grid.ColumnSpan="8" Fill="#eebc3f" Height="2" Margin="15,0,8,0"/>
+        <ListView x:Name="PriceLevelsListView" Grid.Row="2" Grid.ColumnSpan="8" x:FieldModifier="public" ItemsSource="{Binding _priceLevelService.ListCoins}" BorderBrush="Transparent" BorderThickness="1"                           
                             IsItemClickEnabled="True" SelectionMode="None" toolkit:ScrollBarExtensions.KeepVerticalExpanded="{Binding IsScrollBarsExpanded}"
                             ItemContainerStyle="{StaticResource HorizontalSwipe}" ScrollViewer.VerticalScrollBarVisibility="Visible"
                             CanReorderItems="False" AllowDrop="false" Margin="10,0,0,0" >
@@ -186,6 +197,7 @@
                                             <ColumnDefinition Width="Auto" MinWidth="42"/>
                                             <ColumnDefinition Width="0.26*"/>
                                             <ColumnDefinition Width="0.26*"/>
+                                            <ColumnDefinition Width="0.16*"/>
                                             <ColumnDefinition Width="0.16*"/>
                                             <ColumnDefinition Width="0.16*"/>
                                             <ColumnDefinition Width="0.16*"/>
@@ -248,6 +260,18 @@
                                                              Foreground="{x:Bind converters:Functions.PriceLevelToColor(PriceLevels,2,'StopDist'), Mode=OneWay}" TextWrapping="Wrap" RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtStopLevel" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"/>
                                             </RelativePanel>
                                         </Border>
+
+                                        <Border Grid.Column="6" Margin="0,2,0,2"  VerticalAlignment="Center" HorizontalAlignment="Right">
+                                            <RelativePanel >
+                                                <TextBlock Name="txtEmaLevel" 
+                                                     Text="{x:Bind converters:Functions.FormatPriceLevelToString(PriceLevels,3,'$ {0:0.########}'), Mode=OneWay}"
+                                                             Foreground="{x:Bind converters:Functions.PriceLevelToColor(PriceLevels,3,'EmaLevel'), Mode=OneWay}" TextWrapping="Wrap" RelativePanel.AlignRightWithPanel="True" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"/>
+                                                <TextBlock Name="txtDistanceToEmaLevel" 
+                                                      Text="{x:Bind converters:Functions.FormatDistanceToLevelToString(PriceLevels,3,'{0:0.00} %'), Mode=OneWay}"
+                                                             Foreground="{x:Bind converters:Functions.PriceLevelToColor(PriceLevels,3,'EmaDist'), Mode=OneWay}" TextWrapping="Wrap" RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtEmaLevel" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"/>
+                                            </RelativePanel>
+                                        </Border>
+
 
                                     </Grid>
                                     <RelativePanel  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
