--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -104,74 +104,45 @@
                             </ct:SettingsExpander.Items>
                         </ct:SettingsExpander>
 
-                        <ct:SettingsExpander l:Uids.Uid="settingsExpander_AssetView" x:Name="settingsExpander_AssetView"
+                        <ct:SettingsExpander l:Uids.Uid="settingsExpander_Password" x:Name="settingsExpander_Password"
                             VerticalAlignment="Top"
                             HeaderIcon="{ui:FontIcon Glyph=}"
                             IsEnabled="{x:Bind IsCardEnabled, Mode=OneWay}"
                             IsExpanded="{x:Bind IsCardExpanded, Mode=OneWay}">
                             <ct:SettingsExpander.Items>
-                                <ct:SettingsCard l:Uids.Uid="Settings_HideCapitalFlow"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xE75C;}"
-                                    IsEnabled="True">
-                                    <ToggleSwitch l:Uids.Uid="Settings_HideCapitalFlow_Toggle" IsOn="{Binding IsHidingCapitalFlow, Mode=TwoWay}" />
-                                </ct:SettingsCard>
-
-                                <ct:SettingsCard l:Uids.Uid="Settings_HideZeroBalances"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xE75C;}"
-                                    IsEnabled="True">
-                                   <ToggleSwitch l:Uids.Uid="Settings_HideZeroBalances_Toggle" IsOn="{Binding IsHidingZeroBalances, Mode=TwoWay}" />
-                                </ct:SettingsCard>
-                            </ct:SettingsExpander.Items>
-                        </ct:SettingsExpander>
-
-
-                        <ct:SettingsExpander l:Uids.Uid="settingsExpander_PriceLevels" x:Name="settingsExpander_PriceLevels"
-                            VerticalAlignment="Top"
-                            HeaderIcon="{ui:FontIcon Glyph=}"
-                            IsEnabled="{x:Bind IsCardEnabled, Mode=OneWay}"
-                            IsExpanded="{x:Bind IsCardExpanded, Mode=OneWay}">
-                            <ct:SettingsExpander.Items>
-                                <ct:SettingsCard l:Uids.Uid="Settings_PriceLevels1" x:Name="SettingsPL1"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xE896;}"
-                                    IsEnabled="True">
-                                    <StackPanel Orientation="Horizontal">
-                                        <NumberBox x:Name="NbPerc" Value="{Binding WithinRangePerc, Mode=TwoWay}" Maximum="99" Minimum="{Binding CloseToPerc}" Margin="30,0,5,0" />
-                                        <TextBlock Text="%" VerticalAlignment="Center" />
+                                <ct:SettingsCard l:Uids.Uid="Settings_Password" Margin="0,0,0,0"
+                                   HeaderIcon="{ui:FontIcon Glyph=&#xE72E;}"
+                                   IsEnabled="true">
+                                    <StackPanel Orientation="Horizontal" Spacing="8">
+                                        <PasswordBox x:Name="CurrentPasswordBox" l:Uids.Uid="Settings_PasswordBox_Current"
+                                            IsEnabled="{Binding IsPasswordSet}"
+                                            Password="{Binding CurrentPassword, Mode=TwoWay}"
+                                            Width="150"/>
+                                        <PasswordBox x:Name="NewPasswordBox" l:Uids.Uid="Settings_PasswordBox_New"
+                                            Password="{Binding NewPassword, Mode=TwoWay}"
+                                            Width="150"/>
+                                        <Button Content="Change"
+                                            Command="{Binding ChangePasswordCommand}"/>
                                     </StackPanel>
                                 </ct:SettingsCard>
 
-                                <ct:SettingsCard l:Uids.Uid="Settings_PriceLevels2" x:Name="SettingsPL2"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xE896;}"
-                                    IsEnabled="True">
-                                    <StackPanel Orientation="Horizontal">
-                                        <NumberBox Value="{Binding CloseToPerc, Mode=TwoWay}" Maximum="{Binding WithinRangePerc}" Minimum="1" Margin="30,0,5,0" />
-                                        <TextBlock Text="%" VerticalAlignment="Center" />
+                                <ct:SettingsCard l:Uids.Uid="Settings_duressPassword"
+                                    HeaderIcon="{ui:FontIcon Glyph=&#xE72E;}"
+                                    IsEnabled="true">
+                                    <StackPanel Orientation="Horizontal" Spacing="8">
+                                        <PasswordBox x:Name="CurrentDuressPasswordBox" l:Uids.Uid="Settings_duressPasswordBox_Current"
+                                            IsEnabled="{Binding IsDuressPasswordSet}"
+                                            Password="{Binding CurrentDuressPassword, Mode=TwoWay}"
+                                            Width="150"/>
+                                        <PasswordBox x:Name="NewDuressPasswordBox" l:Uids.Uid="Settings_duressPasswordBox_New"
+                                            Password="{Binding NewDuressPassword, Mode=TwoWay}"
+                                            Width="150"/>
+                                        <Button Content="Change"
+                                            Command="{Binding ChangeDuressPasswordCommand}"/>
                                     </StackPanel>
                                 </ct:SettingsCard>
                             </ct:SettingsExpander.Items>
                         </ct:SettingsExpander>
-
-                        <ct:SettingsExpander l:Uids.Uid="settingsExpander_DashBoard" x:Name="settingsExpander_DashBoard"
-                            VerticalAlignment="Top"
-                            HeaderIcon="{ui:FontIcon Glyph=}"
-                            IsEnabled="{x:Bind IsCardEnabled, Mode=OneWay}"
-                            IsExpanded="{x:Bind IsCardExpanded, Mode=OneWay}">
-                            <ct:SettingsExpander.Items>
-                                <ct:SettingsCard l:Uids.Uid="Settings_DashBoard1" x:Name="SettingsDB1"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xE896;}"
-                                    IsEnabled="True">
-                                    <StackPanel Orientation="Horizontal">
-                                        <NumberBox x:Name="NbMaxCoins" Value="{Binding MaxPieCoins, Mode=TwoWay}" Maximum="50" Minimum="2" Margin="30,0,5,0" />
-                                        
-                                    </StackPanel>
-                                </ct:SettingsCard>
-
-                                
-                            </ct:SettingsExpander.Items>
-                        </ct:SettingsExpander>
-
-
-
 
                     </StackPanel>
                 </ScrollViewer>
