--- a/Dialogs/WhatsNewDialog.xaml
+++ b/Dialogs/WhatsNewDialog.xaml
@@ -22,6 +22,19 @@
                      IsReadOnly="True"
                      AcceptsReturn="True"
                      />
+        <!-- Overlay shown while the RTF is loading -->
+        <Grid x:Name="LoadingOverlay"
+              Background="#80000000"
+              Visibility="Collapsed"
+              HorizontalAlignment="Stretch"
+              VerticalAlignment="Stretch">
+            <ProgressRing x:Name="LoadingRing"
+                  IsActive="True"
+                  Width="48"
+                  Height="48"
+                  HorizontalAlignment="Center"
+                  VerticalAlignment="Center"/>
+        </Grid>
     </Grid>
 
 </ContentDialog>
